# doctest_registerlibrary

./: README.MD  doctest_registerlibrary.cmake  doctest_registerlibrary.py
doctest_registerlibrary/: doctest_main.cpp  doctest_registerlibrary.cmake  doctest_registerlibrary.py
examples/: .gitignore  CMakeLists.txt  README.MD  build_example1.sh  build_example1_processed.sh
examples/MyLibrary/: CMakeLists.txt
examples/example1/: CMakeLists.txt
examples/example1/MyLibrary/: CMakeLists.txt  lib1.cpp  lib2.cpp
examples/example1_processed/: clone_doctest_ifneeded.sh  doctest_registerlibrary
examples/example1_processed/MyLibrary/: CMakeLists.txt  doctest_registerlibrary.cpp  lib1.cpp  lib2.cpp
